# shell-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: builtins.hpp  executor.hpp  parser.hpp  utils.hpp
src/: builtins.cpp  executor.cpp  main.cpp  parser.cpp  shell.cpp  utils.cpp
